Fixed alignment of status value

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -286,6 +286,8 @@ input.app-remove, input.app-show {
 .status-value {
     align-self: flex-start;
     text-transform: uppercase;
+    width: 100%;
+    text-align: right;
 }
 
 .status-action {
